--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "xstring": "cpp",
     "iterator": "cpp",
     "xmemory": "cpp",
-    "format": "cpp"
+    "format": "cpp",
+    "compare": "cpp",
+    "type_traits": "cpp"
   }
 }
